--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple database for kurto",
   "main": "index.js",
   "dependencies": {
-    "sqlite3": "~2.2.0"
+    "sqlite3": "^3.0.8"
   },
   "devDependencies": {},
   "scripts": {
